# remnawaveshop_bot

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
deploy/: docker-compose.yml
deploy/nginx/: remnashop-panel.conf
deploy/scripts/: backup.sh  install.sh
deploy/systemd/: remnashop-bot.service  remnashop-web.service
migrations/: env.py
migrations/versions/: 20260308_0001_initial.py
scripts/: hash_password.py  init_db.py  run_bot.py  run_web.py
src/app/: config.py  exceptions.py  logging.py  main.py
src/app/bot/: i18n.py  main.py  states.py  texts.py
src/app/bot/handlers/: admin.py  start.py  support.py  surveys.py
src/app/bot/keyboards/: common.py
src/app/db/: bootstrap.py  models.py  session.py
src/app/db/repositories/: broadcasts.py  logs.py  subscriptions.py  surveys.py  tariffs.py  tickets.py  users.py
src/app/services/: admin_notify.py  broadcast_service.py  payment_stub.py  remnawave.py  scheduler.py  server_service.py  subscription_service.py  survey_service.py  ticket_service.py
src/app/web/: app.py  auth.py  routes_admin.py
src/app/web/static/: style.css
src/app/web/templates/admin/: base.html  dashboard.html  login.html  messages.html  servers.html  surveys.html  system.html  tariffs.html  tickets.html  user_detail.html  users.html
src/remnashop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_smoke.py
