[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "remnashop"
version = "0.1.0"
description = "Telegram VPN subscription bot + admin web panel with Remnawave API integration."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "RemnaShop Team" }]
dependencies = [
  "aiogram>=3.5.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "SQLAlchemy>=2.0.30",
  "aiosqlite>=0.20.0",
  "asyncpg>=0.29.0",
  "alembic>=1.13.2",
  "pydantic-settings>=2.3.4",
  "httpx>=0.27.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
  "passlib[bcrypt]>=1.7.4",
  "itsdangerous>=2.2.0",
  "apscheduler>=3.10.4",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.2",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.4.9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
